# python-dev

./: README.md  pyproject.toml
Homework_1/: README.md  nearest_zero.py  sleight_of_hand.py
Homework_2/: README.md  largest_number.py
Homework_3/: README.md
Homework_3/src/: binary_number_system.py  palindrome.py
Homework_3/tests/: test_binary_number_system.py  test_palindrome.py
PostgreSQL/: 01. create_schema.sql  02. filling_tables.sql  03. views, joins, unions.sql  04. group by, with.sql  05. if, case, functions, json.sql  06. triggers, exceptions.sql  07. indexes.sql  08. optimization.sql  README.md
ProjectFastAPI/: .env  .gitignore  README.md  requirements.txt
ProjectFastAPI/src/: app.py
ProjectFastAPI/src/alembic/: env.py
ProjectFastAPI/src/alembic/versions/: 1d64249d4d31_initial_migration.py  2c6cf981edbc_initial_migration.py
ProjectFastAPI/src/api/: base_router.py  operations.py  products.py  tanks.py  users.py
ProjectFastAPI/src/core/: settings.py
ProjectFastAPI/src/models/: operation.py  product.py  tank.py  user.py
ProjectFastAPI/src/models/schemas/file/: file_request.py
ProjectFastAPI/src/models/schemas/operation/: operation_request.py  operation_response.py
ProjectFastAPI/src/models/schemas/product/: product_response.py
ProjectFastAPI/src/models/schemas/tank/: tank_request.py  tank_response.py
ProjectFastAPI/src/services/: operations.py  products.py  role_checker.py  tanks.py  users.py
src/Homework_1/: README.md  sleight_of_hand.py
src/Homework_2/: correct_bracket_sequences.py  largest_number.py
tests/: test_hw_2.py
(+2 files in other folders)
